--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 
 [dependencies]
 reqwest = { version = "0.10", features = ["blocking"] }
-regex = "1.3"
 scraper = "0.12"
+clap = "2.33.3"
+regex = "1.3"
 url = "2"
+
+[profile.dev]
+opt-level = 3
